# ethiopiaemr-openelis-global-2

./: .env  .env.example  .gitignore  .gitmodules  011-implementation-report.md  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  analyzer-setup.docker-compose.yml  build.docker-compose.yml  dev.docker-compose.yml  docker-compose.analyzer-test.yml  docker-compose.letsencrypt.yml  docker-compose.yml  pom.xml  test.docker-compose.yml
.claude/commands/: speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.cursor/: ci-test-report.md  worktrees.json
.cursor/commands/: speckit.analyze.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.cursor/plans/: backend-test-fixes-plan.md  barcode.md  ci-error-remediation-for-pr-2291-9d9d85db.plan.md  fix-cypress-e2e-test-modal-structure-7a91ce40.plan.md  integer-id-entities.md  remediate-plan-md-and-tasks-md-organization-51d3c3d8.plan.md  remove-all-shortcode-references-and-fix-test-failures-459a29b2.plan.md  sampleitem-remediation-progress-summary.md  sampleitem-remediation-status.md  sampleitem-storage-remediation-d1876c4e.plan.md  tdd-failure-analysis.md  test-data-strategy-remediation-25b33d5c.plan.md  test-fixes-summary.md  test-issues.md  testing-framework-overhaul-6c747537.plan.md  why-tests-dont-catch-issues-locally.md
.cursor/rules/: specify-rules.mdc
.dev-docs/: LETSENCRYPT_SETUP.md
.githooks/: README.md  pre-commit  setup.sh
.github/: copilot-instructions.md  tx-push.yml
.github/workflows/: catalyst-ci.yml  ci.yml  (+9 more)
configuration/: README.md
db/: Dockerfile
docs/: LETSENCRYPT_SETUP.md  analyzer-json-results-setup.md  analyzer.md  astm.md  deployomrs.md
fhir/: Dockerfile
frontend/: .eslintignore  .gitignore  .prettierignore  Dockerfile  Dockerfile.prod  cypress.config.js  package-lock.json  package.json  playwright.config.ts
install/: docker-entrypoint.sh
nginx-proxy/: Dockerfile  docker-entrypoint.sh
projects/catalyst/catalyst-agents/: .pre-commit-config.yaml  CODE_QUALITY.md  Makefile  README.md  pyproject.toml
projects/catalyst/catalyst-agents/src/: a2a_endpoints.py  config.py  llm_clients.py  mcp_client.py
projects/catalyst/catalyst-agents/src/agent_cards/: router.json  schema.json  sqlgen.json
projects/catalyst/catalyst-agents/src/agents/: catalyst_executor.py  router_executor.py  schema_executor.py  schema_server.py  sqlgen_executor.py  sqlgen_server.py
projects/catalyst/catalyst-agents/src/config/: agents_config.yaml
projects/catalyst/catalyst-agents/tests/: test_catalyst_agent.py  test_fallback_mode.py  test_integration.py  test_llm_clients.py  test_multi_agent_flow.py  test_router.py  test_schema_agent.py  test_sqlgen_agent.py  test_trajectory_validation.py
scripts/: download-ci-logs.sh  install-speckit-commands.py  load-ci-fixtures.sh  rebase-resolve-plugins-develop.sh  reset-dev-env.sh  run-e2e-like-ci.sh  setup-workspace.sh
(+1181 files in other folders)
